# LDBench

./: LDBench.cabal  buildContinuous.sh
lib/LDBench/: Convert.hs  Detector.hs  Extractor.hs  Image.hs  ImageBijection.hs  Matcher.hs  OpenCVComputation.hs  PairDetector.hs  Util.hs
lib/LDBench/Detectors/: BoundedDetector.hs  BoundedPairDetector.hs  DoublyBoundedPairDetector.hs  OpenCV.hs
lib/LDBench/Experiments/: RuntimeConfig.hs
lib/LDBench/Experiments/WideBaseline/: Experiment.hs  Homography.hs  Oxford.hs  Results.hs  Util.hs
lib/LDBench/Extractors/: Convert.hs  OpenCV.hs
lib/LDBench/Matchers/: Convert.hs  Vector.hs
test/: ExampleOxford.hs  ExampleRuntimeConfig.hs  ExampleScript.hs
