name:                LDBench
version:             0.0.1.0
license:             MIT 
author:              Eric Christiansen             
homepage:            https://github.com/emchristiansen/LDBench
build-type:          Simple
cabal-version:       >=1.16
description:          
  `LDBench` is a library and command-line tool for benchmarking
  local descriptors.
  
  NOTE: This package isn't even alpha yet. You probably don't want to use it.

source-repository head
  type: git
  location: https://github.com/emchristiansen/LDBench

library
  hs-source-dirs:
    lib 

  exposed-modules:
    LDBench.Detector
    LDBench.Image
    LDBench.ImageBijection
    LDBench.PairDetector
    LDBench.Detectors.BoundedDetector
    LDBench.Detectors.BoundedPairDetector
    LDBench.Detectors.DoublyBoundedPairDetector
    LDBench.Detectors.OpenCV
    LDBench.Extractor
    LDBench.Extractors.OpenCV
    LDBench.Extractors.Convert
    LDBench.Matcher

  default-language: 
    Haskell2010

  default-extensions: 
    FlexibleInstances
    FunctionalDependencies
    MultiParamTypeClasses
    TemplateHaskell
    TypeSynonymInstances
    QuasiQuotes
    FlexibleContexts
    OverloadedStrings
    RankNTypes
    GADTs

  ghc-options: 
    -Wall 
    -auto-all 
    -caf-all 
    -O2

  build-depends:
      base >= 4 && < 5
    , lens
    , filemanip
    , process
    , filepath
    , regex-compat
    , directory
    , MissingH
    , raw-strings-qq
    , split
    , text
    , vector
    , JuicyPixels
    , repa
    , thrift
    , OpenCVThrift
    , OpenCVThriftLocalhost

--executable thriftier
  --hs-source-dirs:
    --bin

  --main-is:
    --Thriftier.hs

  --default-language: 
    --Haskell2010

  --default-extensions: 
    --FunctionalDependencies
    --MultiParamTypeClasses
    --TemplateHaskell
    ----FlexibleInstances
    ----TypeSynonymInstances
    ----QuasiQuotes
    ----FlexibleContexts
    ----OverloadedStrings

  --ghc-options: 
    ---Wall 
    ---auto-all 
    ---caf-all 
    -----O2

  --build-depends:
      --base >= 4 && < 5
    --, Thriftier
    --, lens
    --, filemanip
    --, process
    --, filepath
    --, regex-compat
    --, directory
    --, MissingH
    --, raw-strings-qq
    --, split
    --, text
    --, directory
    --, optparse-applicative

--Test-suite correctness 
  --type:
    --exitcode-stdio-1.0

  --hs-source-dirs:
    --test

  --main-is:
    --Correctness/Thriftier/Run.hs

  --default-language: 
    --Haskell2010

  --default-extensions: 
    ----FlexibleInstances
    ----FlexibleContexts
    ----FunctionalDependencies
    ----MultiParamTypeClasses
    ----TemplateHaskell
    ----TypeSynonymInstances
    ----QuasiQuotes
    ----OverloadedStrings

  --ghc-options: 
    ---Wall 
    ---auto-all 
    ---caf-all 
    -----O2

  --build-depends:
      --base >= 4 && < 5
    --, Thriftier
    --, lens
    --, tasty
    --, tasty-hunit
    --, tasty-quickcheck
    --, tasty-golden
    --, filepath
