name:                LDBench
version:             0.0.1.0
license:             MIT 
author:              Eric Christiansen             
homepage:            https://github.com/emchristiansen/LDBench
build-type:          Simple
cabal-version:       >=1.16
description:          
  `LDBench` is a library and command-line tool for benchmarking
  local descriptors.
  
  NOTE: This package isn't even alpha yet. You probably don't want to use it.

source-repository head
  type: git
  location: https://github.com/emchristiansen/LDBench

library
  hs-source-dirs:
    lib 

  exposed-modules:
    LDBench.Detector
    LDBench.Convert
    LDBench.Util
    LDBench.Image
    LDBench.ImageBijection
    LDBench.PairDetector
    LDBench.Detectors.BoundedDetector
    LDBench.Detectors.BoundedPairDetector
    LDBench.Detectors.DoublyBoundedPairDetector
    LDBench.Detectors.OpenCV
    LDBench.Extractor
    LDBench.Extractors.OpenCV
    LDBench.Extractors.Convert
    LDBench.Matcher
    LDBench.Experiments.RuntimeConfig
    LDBench.Experiments.WideBaseline.Results
    LDBench.Experiments.WideBaseline.Experiment
    LDBench.Experiments.WideBaseline.Oxford
    LDBench.Experiments.WideBaseline.Homography
    LDBench.Experiments.WideBaseline.Util

  default-language: 
    Haskell2010

  default-extensions: 
    FlexibleInstances
    FunctionalDependencies
    MultiParamTypeClasses
    TemplateHaskell
    TypeSynonymInstances
    QuasiQuotes
    FlexibleContexts
    OverloadedStrings
    RankNTypes
    GADTs
    DeriveDataTypeable

  ghc-options: 
    -Wall 
    -auto-all 
    -caf-all 
    -O2

  build-depends:
      base >= 4 && < 5
    , lens
    , filemanip
    , process
    , filepath
    , regex-compat
    , directory
    , MissingH
    , raw-strings-qq
    , split
    , text
    , vector
    , JuicyPixels
    , repa
    , repa-algorithms
    , thrift
    , OpenCVThrift
    , OpenCVThriftLocalhost

executable LDBench
  hs-source-dirs:
    bin

  main-is:
    Main.hs

  default-language:
    Haskell2010

  build-depends:
      base >= 4 && < 5
    , optparse-applicative
    , lens
    , directory
    , regex-compat
    , filepath
    , process
    , filemanip
    , plugins
    , LDBench

  default-extensions:
    TemplateHaskell
    MultiParamTypeClasses
    FunctionalDependencies
    TypeSynonymInstances
    FlexibleInstances

--executable thriftier
  --hs-source-dirs:
    --bin

  --main-is:
    --Thriftier.hs

  --default-language: 
    --Haskell2010

  --default-extensions: 
    --FunctionalDependencies
    --MultiParamTypeClasses
    --TemplateHaskell
    ----FlexibleInstances
    ----TypeSynonymInstances
    ----QuasiQuotes
    ----FlexibleContexts
    ----OverloadedStrings

  --ghc-options: 
    ---Wall 
    ---auto-all 
    ---caf-all 
    -----O2

  --build-depends:
      --base >= 4 && < 5
    --, Thriftier
    --, lens
    --, filemanip
    --, process
    --, filepath
    --, regex-compat
    --, directory
    --, MissingH
    --, raw-strings-qq
    --, split
    --, text
    --, directory
    --, optparse-applicative

--Test-suite correctness 
  --type:
    --exitcode-stdio-1.0

  --hs-source-dirs:
    --test

  --main-is:
    --Correctness/Thriftier/Run.hs

  --default-language: 
    --Haskell2010

  --default-extensions: 
    ----FlexibleInstances
    ----FlexibleContexts
    ----FunctionalDependencies
    ----MultiParamTypeClasses
    ----TemplateHaskell
    ----TypeSynonymInstances
    ----QuasiQuotes
    ----OverloadedStrings

  --ghc-options: 
    ---Wall 
    ---auto-all 
    ---caf-all 
    -----O2

  --build-depends:
      --base >= 4 && < 5
    --, Thriftier
    --, lens
    --, tasty
    --, tasty-hunit
    --, tasty-quickcheck
    --, tasty-golden
    --, filepath
